started modules, controllers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,10 @@
     <title>Cook Helper</title>
 </head>
 <body>
-    <h1>This is going to be our home page</h1>
+    <h1>Home page</h1>
+    <form action="/signup" method ="GET">
+        <button>Sign up</button>
+    </form>
+
 </body>
 </html>
