sign up and in system from frontend

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,10 @@
     <form action="/signup" method ="GET">
         <button>Sign up</button>
     </form>
+    <form action="/login" method ="GET">
+        <button>Log in</button>
+    </form>
+    
 
 </body>
 </html>
