send user id when logging in

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -67,9 +67,7 @@
         </div>
         <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light  center-align white-text text-darken-2">FULL PAGE</a>
         <div class = "divider" style="margin-top: 15px;"></div>
-       
       </div>
-      
     </div>
   </section>
 
@@ -91,7 +89,6 @@
             </div>
             <div class="card-action">
               <a href="#" class = "waves-effect blue-text text-darken-2">Read More</a>
-
             </div>
           </div>
         </div>
@@ -130,7 +127,118 @@
     </div>
   </section>
 <!--Meaty foods-->
+<section id="works" class="section section-cardinfo scrollspy">
+  <div class="container new-section">
+    <h3 class = "heading left-align  grey-text text-darken-3" style="margin-left: 10px;">Meaty foods</h3>
+    <div class="row">
+      <div class="col s12 m4">
+        <div class="card z-depth-1 hoverable">
+          
+          <div class="card-image">
+              <img class = "card-photo" src="/photos/PSD_Food_illustrations_3190_pancakes_with_butter-1wi1tz5.jpg" height = 200  alt="house">
+
+              <span class="card-title grey-text text-darken-3"><strong>Rooms</strong></span>
+          </div>
+          <div class="card-content">
+            <p class = "grey-text text-darken-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, voluptatibus.</p>
+          </div>
+          <div class="card-action">
+            <a href="#" class = "waves-effect blue-text text-darken-2">Read More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card z-depth-1 hoverable">
+          <div class="card-image">
+              <img class = "card-photo" src="https://images.unsplash.com/photo-1565183928294-7063f23ce0f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200 alt="kitchen">
+              <span class="card-title grey-text text-darken-3"><strong>Kitchens</strong></span>
+          </div>
+          <div class="card-content">
+            <p class = "grey-text text-darken-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, dolorum?</p>
+          </div>
+          <div class="card-action">
+            <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card z-depth-1 hoverable">
+          <div class="card-image">
+              <img class = "card-photo" src="https://images.unsplash.com/photo-1577412647305-991150c7d163?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200  alt="office">
+              <span class="card-title grey-text text-darken-3"><strong>Offices</strong></span>
+          </div>
+          <div class="card-content">
+            <p class = "grey-text text-darken-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae.</p>
+          </div>
+          <div class="card-action">
+            <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
+          </div>
+        </div>
+      </div>
+      <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light center-align white-text text-darken-2">FULL PAGE</a>
+      
+      <div class = "divider" style="margin-top: 15px;"></div>
+    </div>
+  </div>
+</section>
+
+
 <!--Low-fat foods-->
+<section id="works" class="section section-cardinfo scrollspy">
+  <div class="container new-section">
+    <h3 class = "heading left-align  grey-text text-darken-3" style="margin-left: 10px;">Low fat foods</h3>
+    <div class="row">
+      <div class="col s12 m4">
+        <div class="card z-depth-1 hoverable">
+          
+          <div class="card-image">
+              <img class = "card-photo" src="/photos/PSD_Food_illustrations_3190_pancakes_with_butter-1wi1tz5.jpg" height = 200  alt="house">
+
+              <span class="card-title grey-text text-darken-3"><strong>Rooms</strong></span>
+          </div>
+          <div class="card-content">
+            <p class = "grey-text text-darken-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, voluptatibus.</p>
+          </div>
+          <div class="card-action">
+            <a href="#" class = "waves-effect blue-text text-darken-2">Read More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card z-depth-1 hoverable">
+          <div class="card-image">
+              <img class = "card-photo" src="https://images.unsplash.com/photo-1565183928294-7063f23ce0f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200 alt="kitchen">
+              <span class="card-title grey-text text-darken-3"><strong>Kitchens</strong></span>
+          </div>
+          <div class="card-content">
+            <p class = "grey-text text-darken-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, dolorum?</p>
+          </div>
+          <div class="card-action">
+            <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card z-depth-1 hoverable">
+          <div class="card-image">
+              <img class = "card-photo" src="https://images.unsplash.com/photo-1577412647305-991150c7d163?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200  alt="office">
+              <span class="card-title grey-text text-darken-3"><strong>Offices</strong></span>
+          </div>
+          <div class="card-content">
+            <p class = "grey-text text-darken-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae.</p>
+          </div>
+          <div class="card-action">
+            <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
+          </div>
+        </div>
+      </div>
+      <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light center-align white-text text-darken-2">FULL PAGE</a>
+      
+      <div class = "divider" style="margin-top: 15px;"></div>
+    </div>
+  </div>
+</section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
