food rec function based on weight

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,7 +25,7 @@
             <div class="card-image">
                 <img class = "card-photo" src="/photos/PSD_Food_illustrations_3190_pancakes_with_butter-1wi1tz5.jpg" height = 200  alt="house">
 
-                <span class="card-title grey-text text-darken-3"><strong>Rooms</strong></span>
+                <span class="card-title grey-text text-darken-3"><strong> <%= foods[0].name %>  </strong></span>
             </div>
             <div class="card-content">
               <p class = "grey-text text-darken-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, voluptatibus.</p>
