--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,70 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="http://localhost:5000/css/dashboard.css">
     <title>Dashboard</title>
-    <style>
-        body{
-            background-color: whitesmoke;
-        }
-
-    </style>
 </head>
 <body>
     <h2 class = "heading center-align grey-text text-darken-3">Welcome to your dashboard</h2>
-<!--Featured foods-->
+    <div class="col s12 m12">
+      <ul class="tabs">
+        <li class="tab col s3 blue-text"><a href="#test1" class = "black-text">Test 1</a></li>
+        <li class="tab col s3"><a class="active black-text" href="#test2">Test 2</a></li>
+        <li class="tab col s3 disabled"><a href="#test3" class = "black-text">Disabled Tab</a></li>
+        <li class="tab col s3"><a href="#test4" class = "black-text">Test 4</a></li>
+      </ul>
+    </div>
+    <!--Featured foods-->
 <section id="works" class="section section-cardinfo scrollspy">
-    <div class="container new-section">
-      <h3 class = "heading left-align  grey-text text-darken-3" style="margin-left: 10px;">Recommended foods</h3>
-      <div class="row">
-        <div class="col s12 m4">
+    <div class="foodsection">
+        <h3 class = "heading left-align  grey-text text-darken-3" style="margin-left: 10px;">Recommended foods</h3>
+      <% foods.forEach(function(food) {%>
+        <div class="row">
+        <div class="col s6 m3">
           <div class="card z-depth-1 hoverable">
-            
             <div class="card-image">
-                <img class = "card-photo" src="/photos/PSD_Food_illustrations_3190_pancakes_with_butter-1wi1tz5.jpg" height = 200  alt="house">
-
-                <span class="card-title grey-text text-darken-3"><strong> <%= foods[0].name %>  </strong></span>
-            </div>
-            <div class="card-content">
-              <p class = "grey-text text-darken-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, voluptatibus.</p>
+                <img class = "card-photo" src="<%= food.photoLink %> " height = 220  alt="<%= food.name %>">
             </div>
             <div class="card-action">
-              <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
-
+              <a href="#" class = "waves-effect black-text text-darken-2"><%= food.name %> </a>
             </div>
           </div>
         </div>
-        <div class="col s12 m4">
-          <div class="card z-depth-1 hoverable">
-            <div class="card-image">
-                <img class = "card-photo" src="https://images.unsplash.com/photo-1565183928294-7063f23ce0f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200 alt="kitchen">
-                <span class="card-title grey-text text-darken-3"><strong>Kitchens</strong></span>
-            </div>
-            <div class="card-content">
-              <p class = "grey-text text-darken-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, dolorum?</p>
-            </div>
-            <div class="card-action">
-              <a href="#" class = "waves-effect blue-text text-darken-2">Read More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card z-depth-1 hoverable">
-            <div class="card-image">
-                <img class = "card-photo" src="https://images.unsplash.com/photo-1577412647305-991150c7d163?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200  alt="office">
-                <span class="card-title grey-text text-darken-3"><strong>Offices</strong></span>
-            </div>
-            <div class="card-content">
-              <p class = "grey-text text-darken-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae.</p>
-            </div>
-            <div class="card-action">
-              <a href="#" class = "waves-effect blue-text text-darken-2">Read More</a>
-            </div>
-          </div>
-         
-        </div>
-        <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light  center-align white-text text-darken-2">FULL PAGE</a>
-        <div class = "divider" style="margin-top: 15px;"></div>
+      <% }); %> 
       </div>
+
+        <!-- <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light  center-align white-text text-darken-2">FULL PAGE</a>
+        <div class = "divider" style="margin-top: 15px;"></div> -->
+     
+     
     </div>
   </section>
 
