tabs bar, different categories working

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -6,3 +6,11 @@ body {
   margin-left: 50px;
   margin-right: 50px;
 }
+
+.recfoods {
+  visibility: hidden;
+}
+
+#tabsBar {
+  padding-left: 5px;
+}
