--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,15 +8,27 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <h2 class = "heading center-align grey-text text-darken-3">Welcome to your dashboard</h2>
-    <div class="col s12 m12">
-      <ul class="tabs">
-        <li class="tab col s3 blue-text"><a href="#test1" class = "black-text">Test 1</a></li>
-        <li class="tab col s3"><a class="active black-text" href="#test2">Test 2</a></li>
-        <li class="tab col s3 disabled"><a href="#test3" class = "black-text">Disabled Tab</a></li>
-        <li class="tab col s3"><a href="#test4" class = "black-text">Test 4</a></li>
-      </ul>
+
+    <!-- <h2 style="color: #EE6E73;" class = "heading center-align red-text lighten-2">Welcome to your dashboard</h2> -->
+    <div style="width: 100%;" class="row">
+      <div class="col s12 m12">
+        <ul id = "tabsBar"  class="tabs tabs-fixed-width tab-demo z-depth-1 hide-on-med-and-down">
+          <li  class="tab col s3 blue-text"><a id = "recFoodsTab"  href="?category=recfoods" class = "active">Featured Foods</a></li>
+          <li class="tab col s3"><a id = "fastFoodsTab"  href="?category=fastfoods">Fast Foods</a></li>
+          <li class="tab col s3"><a id = "meatCornerTab" href="?category=meatcorner">Meat Corner</a></li>
+          <li class="tab col s3"><a id = "lowFatTab" href="?category=lowfat">Low-Fat</a></li>
+        </ul>
+      </div>
     </div>
+
+    <!--Side Nav for mobile view-->
+    <ul class="sidenav" id = "mobile-nav">
+      <li><a style="color:#EE6E73" href="?category=recfoods">Featured</a></li>
+      <li><a style="color:#EE6E73" href="?category=fastfoods">Fast Foods</a></li>
+      <li><a style="color:#EE6E73" href="?category=meatcorner">Meat Corner</a></li>
+      <li><a style="color:#EE6E73" href="?category=lowfat">Low Fat</a></li>
+    </ul>
+
     <!--Featured foods-->
 <section id="works" class="section section-cardinfo scrollspy">
     <div class="foodsection">
@@ -35,182 +47,11 @@
         </div>
       <% }); %> 
       </div>
-
-        <!-- <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light  center-align white-text text-darken-2">FULL PAGE</a>
-        <div class = "divider" style="margin-top: 15px;"></div> -->
-     
-     
     </div>
   </section>
 
-<!--Fast foods-->
-<section id="works" class="section section-cardinfo scrollspy">
-    <div class="container new-section">
-      <h3 class = "heading left-align  grey-text text-darken-3" style="margin-left: 10px;">Fast foods</h3>
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="card z-depth-1 hoverable">
-            
-            <div class="card-image">
-                <img class = "card-photo" src="/photos/PSD_Food_illustrations_3190_pancakes_with_butter-1wi1tz5.jpg" height = 200  alt="house">
 
-                <span class="card-title grey-text text-darken-3"><strong>Rooms</strong></span>
-            </div>
-            <div class="card-content">
-              <p class = "grey-text text-darken-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, voluptatibus.</p>
-            </div>
-            <div class="card-action">
-              <a href="#" class = "waves-effect blue-text text-darken-2">Read More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card z-depth-1 hoverable">
-            <div class="card-image">
-                <img class = "card-photo" src="https://images.unsplash.com/photo-1565183928294-7063f23ce0f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200 alt="kitchen">
-                <span class="card-title grey-text text-darken-3"><strong>Kitchens</strong></span>
-            </div>
-            <div class="card-content">
-              <p class = "grey-text text-darken-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, dolorum?</p>
-            </div>
-            <div class="card-action">
-              <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card z-depth-1 hoverable">
-            <div class="card-image">
-                <img class = "card-photo" src="https://images.unsplash.com/photo-1577412647305-991150c7d163?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200  alt="office">
-                <span class="card-title grey-text text-darken-3"><strong>Offices</strong></span>
-            </div>
-            <div class="card-content">
-              <p class = "grey-text text-darken-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae.</p>
-            </div>
-            <div class="card-action">
-              <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
-            </div>
-          </div>
-        </div>
-        <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light center-align white-text text-darken-2">FULL PAGE</a>
-        
-        <div class = "divider" style="margin-top: 15px;"></div>
-      </div>
-    </div>
-  </section>
-<!--Meaty foods-->
-<section id="works" class="section section-cardinfo scrollspy">
-  <div class="container new-section">
-    <h3 class = "heading left-align  grey-text text-darken-3" style="margin-left: 10px;">Meaty foods</h3>
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="card z-depth-1 hoverable">
-          
-          <div class="card-image">
-              <img class = "card-photo" src="/photos/PSD_Food_illustrations_3190_pancakes_with_butter-1wi1tz5.jpg" height = 200  alt="house">
-
-              <span class="card-title grey-text text-darken-3"><strong>Rooms</strong></span>
-          </div>
-          <div class="card-content">
-            <p class = "grey-text text-darken-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, voluptatibus.</p>
-          </div>
-          <div class="card-action">
-            <a href="#" class = "waves-effect blue-text text-darken-2">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card z-depth-1 hoverable">
-          <div class="card-image">
-              <img class = "card-photo" src="https://images.unsplash.com/photo-1565183928294-7063f23ce0f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200 alt="kitchen">
-              <span class="card-title grey-text text-darken-3"><strong>Kitchens</strong></span>
-          </div>
-          <div class="card-content">
-            <p class = "grey-text text-darken-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, dolorum?</p>
-          </div>
-          <div class="card-action">
-            <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card z-depth-1 hoverable">
-          <div class="card-image">
-              <img class = "card-photo" src="https://images.unsplash.com/photo-1577412647305-991150c7d163?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200  alt="office">
-              <span class="card-title grey-text text-darken-3"><strong>Offices</strong></span>
-          </div>
-          <div class="card-content">
-            <p class = "grey-text text-darken-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae.</p>
-          </div>
-          <div class="card-action">
-            <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
-          </div>
-        </div>
-      </div>
-      <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light center-align white-text text-darken-2">FULL PAGE</a>
-      
-      <div class = "divider" style="margin-top: 15px;"></div>
-    </div>
-  </div>
-</section>
-
-
-<!--Low-fat foods-->
-<section id="works" class="section section-cardinfo scrollspy">
-  <div class="container new-section">
-    <h3 class = "heading left-align  grey-text text-darken-3" style="margin-left: 10px;">Low fat foods</h3>
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="card z-depth-1 hoverable">
-          
-          <div class="card-image">
-              <img class = "card-photo" src="/photos/PSD_Food_illustrations_3190_pancakes_with_butter-1wi1tz5.jpg" height = 200  alt="house">
-
-              <span class="card-title grey-text text-darken-3"><strong>Rooms</strong></span>
-          </div>
-          <div class="card-content">
-            <p class = "grey-text text-darken-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, voluptatibus.</p>
-          </div>
-          <div class="card-action">
-            <a href="#" class = "waves-effect blue-text text-darken-2">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card z-depth-1 hoverable">
-          <div class="card-image">
-              <img class = "card-photo" src="https://images.unsplash.com/photo-1565183928294-7063f23ce0f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200 alt="kitchen">
-              <span class="card-title grey-text text-darken-3"><strong>Kitchens</strong></span>
-          </div>
-          <div class="card-content">
-            <p class = "grey-text text-darken-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, dolorum?</p>
-          </div>
-          <div class="card-action">
-            <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card z-depth-1 hoverable">
-          <div class="card-image">
-              <img class = "card-photo" src="https://images.unsplash.com/photo-1577412647305-991150c7d163?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height = 200  alt="office">
-              <span class="card-title grey-text text-darken-3"><strong>Offices</strong></span>
-          </div>
-          <div class="card-content">
-            <p class = "grey-text text-darken-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae.</p>
-          </div>
-          <div class="card-action">
-            <a href="#" class = "waves-effect blue-text text-darken-2">Expand</a>
-          </div>
-        </div>
-      </div>
-      <a href="#" style = "margin-left: 15px; margin-top: 15px;" class = "btn blue darken-2 waves-effect waves-light center-align white-text text-darken-2">FULL PAGE</a>
-      
-      <div class = "divider" style="margin-top: 15px;"></div>
-    </div>
-  </div>
-</section>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="http://localhost:5000/js/dashboard.js"></script>
 </body>
 </html>
