--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,51 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="http://localhost:5000/css/dashboard.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+    crossorigin="anonymous"></script>
     <title>Dashboard</title>
 </head>
 <body>
-
-    <!-- <h2 style="color: #EE6E73;" class = "heading center-align red-text lighten-2">Welcome to your dashboard</h2> -->
-    <div style="width: 100%;" class="row">
-      <div class="col s12 m12">
-        <ul id = "tabsBar"  class="tabs tabs-fixed-width tab-demo z-depth-1 hide-on-med-and-down">
-          <li  class="tab col s3 blue-text"><a id = "recFoodsTab"  href="?category=recfoods" class = "active">Featured Foods</a></li>
-          <li class="tab col s3"><a id = "fastFoodsTab"  href="?category=fastfoods">Fast Foods</a></li>
-          <li class="tab col s3"><a id = "meatCornerTab" href="?category=meatcorner">Meat Corner</a></li>
-          <li class="tab col s3"><a id = "lowFatTab" href="?category=lowfat">Low-Fat</a></li>
-        </ul>
+  <div class="navbar-fixed">
+    <nav class="white">
+      <div class="container">
+        <div class="nav-wrapper">
+          <a style="color: #EE7176" href="" class="brand-logo"> COOK HELPER</a>
+          <a href="#" class = "black-text sidenav-trigger" data-target = "mobile-nav">
+              <i class="fas fa-bars fa-2x"></i>
+          </a>
+          <ul class="right hide-on-med-and-down black-text">
+            <li>
+              <a style = "color: #EE7176;" href="" class="waves-effect"><strong>Dashboard</strong></a>
+            </li>
+            <li>
+              <a style = "color: #f3979a;" href="" class="waves-effect">Settings</a>
+            </li>
+            <li>
+              <a style = "color: #f3979a;" onclick="searchPage()" class="waves-effect">Search</a>
+            </li>
+          </ul>
+          
+          
+        </div>
       </div>
-    </div>
+    </nav>
+  </div>
+    
+<!--Food Categories Tab-->
+   <div style="padding-top: 2px;" class="navbar-fixed hide-on-med-and-down">
+    <nav class="white">
+      <div class="nav-wrapper">
+        <div style="width: 100%;" class="row">
+          <ul id = "tabsBar"  class="tabs tab-demo  hide-on-med-and-down">
+            <li  class="tab col s3"><a id = "recFoodsTab" href="?category=recfoods">Featured Foods</a></li>
+            <li class="tab col s3"><a id = "fastFoodsTab"   href="?category=fastfoods">Fast Foods</a></li>
+            <li class="tab col s3"><a id = "meatCornerTab" href="?category=meatcorner">Meat Corner</a></li>
+            <li class="tab col s3"><a id = "lowFatTab" href="?category=lowfat">Low-Fat</a></li>
+            <!-- <li class="tab col s3"><a id = "searchTab" href="?category=search">Search</a></li> -->
+          </ul>
+        </div>
+       </div>
+    </nav>
+   </div>
+   
 
     <!--Side Nav for mobile view-->
     <ul class="sidenav" id = "mobile-nav">
-      <li><a style="color:#EE6E73" href="?category=recfoods">Featured</a></li>
-      <li><a style="color:#EE6E73" href="?category=fastfoods">Fast Foods</a></li>
-      <li><a style="color:#EE6E73" href="?category=meatcorner">Meat Corner</a></li>
-      <li><a style="color:#EE6E73" href="?category=lowfat">Low Fat</a></li>
+      <p class = "sideMenuText"><strong>Main Menu</strong></p>
+      <li><a  href="#home">Home</a></li>
+      <li><a  href="#settings">Settings</a></li>
+      <hr>
+      <p class = "sideMenuText "> <strong>Food Categories</strong></p>
+      <li id = "featuredSideTab"><a  href="?category=recfoods">Featured</a></li>
+      <li id = "fastFoodSideTab"><a  href="?category=fastfoods">Fast Foods</a></li>
+      <li id = "meatCornerSideTab"><a  href="?category=meatcorner">Meat Corner</a></li>
+      <li id = "lowFatSideTab"><a  href="?category=lowfat">Low Fat</a></li>
     </ul>
 
     <!--Featured foods-->
 <section id="works" class="section section-cardinfo scrollspy">
     <div class="foodsection">
-        <h3 class = "heading left-align  grey-text text-darken-3" style="margin-left: 10px;">Recommended foods</h3>
       <% foods.forEach(function(food) {%>
         <div class="row">
-        <div class="col s6 m3">
+        <div class="col s6 m4 l3">
           <div class="card z-depth-1 hoverable">
             <div class="card-image">
-                <img class = "card-photo" src="<%= food.photoLink %> " height = 220  alt="<%= food.name %>">
+                <img class = "card-photo" onclick="sendToRelevantPage()" src="<%= food.photoLink %> " height = 220  alt="<%= food.name %>">
             </div>
-            <div class="card-action">
-              <a href="#" class = "waves-effect black-text text-darken-2"><%= food.name %> </a>
+            <div class="card-action" >
+              <a href="#" style="color: #EE7176;" class = "waves-effect"><%= food.name %> </a>
             </div>
           </div>
         </div>
       <% }); %> 
       </div>
     </div>
-  </section>
+</section>
 
+      
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="http://localhost:5000/js/dashboard.js"></script>
