better design for search page, apiController

--- a/views/searchPage.ejs
+++ b/views/searchPage.ejs
@@ -46,6 +46,20 @@
       <hr>
     </ul>
 
+    <!--Food Categories Tab-->
+   <div style="padding-top: 2px;" class="hide-on-med-and-down">
+    <nav class="white">
+      <div class="nav-wrapper">
+        <div style="width: 100%;" class="row">
+          <ul id = "tabsBar"  class="tabs tab-demo  hide-on-med-and-down">
+            <li class="tab col s6"><a id = "recFoodsTab" href="?searchtype=general">General Search</a></li>
+            <li class="tab col s6"><a id = "fastFoodsTab"   href="?searchtype=ingredients">Search by Ingredients</a></li>
+          </ul>
+        </div>
+       </div>
+    </nav>
+   </div>
+
     <div class="section new-section">
         <div class="container">
             <!--Search Field-->
