--- a/public/css/searchPage.css
+++ b/public/css/searchPage.css
@@ -10,7 +10,7 @@ body {
   margin-top: 20px;
 }
 
-.chosenIngredient {
+.tag {
   background: teal;
   border-radius: 3px 0 0 3px;
   color: white;
@@ -21,5 +21,4 @@ body {
   position: relative;
   margin: 0 10px 10px 0;
   text-decoration: none;
-  -webkit-transition: color 0.2s;
 }
