bug fixes, url fixes, better search

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,7 +24,10 @@
         <br>
         <p id = "warningBtn" style="color:red;"></p>
     </form>
-    <a style = "text-decoration: none;" href="login.html">Already have an account? Sign in</a>
+    <a style = "text-decoration: none;" href="/login">Already have an account? Sign in</a>
+    <script>
+        const root = `<%=root%>`;
+    </script>
     <script src = "js/signup.js"></script>
 
 </body>
