--- a/views/searchPage.ejs
+++ b/views/searchPage.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://localhost:5000/css/searchPage.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
     crossorigin="anonymous"></script>
@@ -69,7 +71,7 @@
                     <div class="input-field col s12">
                     
                     <input type="text" id="autocomplete-input" class="autocomplete">
-                    <label for="autocomplete-input">Enter ingredients</label>
+                    <label id = "label" for="autocomplete-input"></label>
                     
                     </div>
                     
@@ -82,22 +84,12 @@
 
     <div class="section">
         <div class="container">
-            <div class="row">
+            <div id = "tags-row" class="row">
                 <p id="warning"></p>
-                <span id = "output""></span>
+                <span class = "delete-item secondary-content"></span>
             </div>    
         </div>
     </div>
-
-    <!-- <div id = "outputSection" class="section">
-        <div id ="outputBox" class="container">
-            <p id = "output"></p>
-              <div class="row">
-                
-              </div>
-        </div>
-    </div> -->
-      
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="http://localhost:5000/js/searchPage.js"></script>
