search page search functionality going

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -20,7 +20,7 @@
           </a>
           <ul class="right hide-on-med-and-down black-text">
             <li>
-              <a style = "color: #EE7176;" href="" class="waves-effect"><strong>Dashboard</strong></a>
+              <a style = "color: #EE7176;" href="<%=root%>" class="waves-effect"><strong>Dashboard</strong></a>
             </li>
             <li>
               <a style = "color: #f3979a;" href="" class="waves-effect">Settings</a>
@@ -82,8 +82,9 @@
             </div>
           </div>
         </div>
-      <% }); %> 
       </div>
+    <% }); %> 
+      
     </div>
 </section>
 
