search page entering stuff working

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,7 +14,8 @@
     <nav class="white">
       <div class="container">
         <div class="nav-wrapper">
-          <a style="color: #EE7176" href="" class="brand-logo"> COOK HELPER</a>
+          <a href="" class="brand-logo"><img src="https://i.ibb.co/stzNwrf/cook-helper-logo.png" alt="cook helper" height = 60 weight = 60></a>
+          <!-- <a style="color: #EE7176" href="" class="brand-logo"> COOK HELPER</a> -->
           <a href="#" class = "black-text sidenav-trigger" data-target = "mobile-nav">
               <i class="fas fa-bars fa-2x"></i>
           </a>
@@ -82,13 +83,10 @@
             </div>
           </div>
         </div>
-      </div>
     <% }); %> 
-      
+  </div> 
     </div>
 </section>
-
-      
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="<%=root%>/js/dashboard.js"></script>
