--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -24,10 +24,10 @@
               <a style = "color: #EE7176;" href="<%=root%>" class="waves-effect"><strong>Dashboard</strong></a>
             </li>
             <li>
-              <a style = "color: #f3979a;" href="" class="waves-effect">Settings</a>
+              <a style = "color: #f3979a;" href = "<%=root%>/user/search" class="waves-effect">Search</a>
             </li>
             <li>
-              <a style = "color: #f3979a;" href = "<%=root%>/user/search" class="waves-effect">Search</a>
+              <a style = "color: #f3979a;" href="" class="waves-effect">Settings</a>
             </li>
           </ul>
           
@@ -58,7 +58,8 @@
     <!--Side Nav for mobile view-->
     <ul class="sidenav" id = "mobile-nav">
       <p class = "sideMenuText"><strong>Main Menu</strong></p>
-      <li><a  href="#home">Home</a></li>
+      <li><a  href="">Dashboard</a></li>
+      <li><a  href = "<%=root%>/user/search">Search</a></li>
       <li><a  href="#settings">Settings</a></li>
       <hr>
       <p class = "sideMenuText "> <strong>Food Categories</strong></p>
