--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -77,7 +77,7 @@
         <div class="col s6 m4 l3">
           <div class="card z-depth-1 hoverable">
             <div class="card-image">
-                <img class = "card-photo" onclick="sendToRelevantPage()" src="<%= food.photoLink %> " height = 220  alt="<%= food.name %>">
+                <img class = "card-photo" onclick="sendToRelevantPage('<%=food.id%>')" src="<%= food.photoLink %> " height = 220  alt="<%= food.name %>">
             </div>
             <div class="card-action" >
               <a href="#" style="color: #EE7176;" class = "waves-effect"><%= food.name %> </a>
@@ -91,5 +91,10 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="<%=root%>/js/dashboard.js"></script>
+<script>
+  function sendToRelevantPage(id){
+    location.href = `<%=root%>/user/food/${id}`;
+  }
+</script>
 </body>
 </html>
