--- a/views/generalSearch.ejs
+++ b/views/generalSearch.ejs
@@ -50,7 +50,7 @@
       <li><a  href="<%=root%>/user/search/ingredients">By Ingredient</a></li>
     </ul>
 
-    <!--Food Categories Tab-->
+    <!--Search Type Tabs-->
    <div style="padding-top: 2px;" class="hide-on-med-and-down">
     <nav class="white">
       <div class="nav-wrapper">
@@ -64,6 +64,7 @@
     </nav>
    </div>
    <div class="divider"></div>
+   
     <div class="section new-section">
         <div class="container">
             <!--Search Field-->
@@ -92,7 +93,7 @@
           <div class="col s6 m4 l3">
             <div class="card z-depth-1 hoverable">
               <div class="card-image">
-                  <img class = "card-photo" src="<%= food.photoLink %> " height = 180  alt="<%= food.name %>">
+                  <img class = "card-photo" onclick="sendToRelevantPage('<%=food.id%>')"  src="<%= food.photoLink %> " height = 180  alt="<%= food.name %>">
               </div>
               <div class="card-action" >
                 <a href="#" style="color: #EE7176;" class = "waves-effect"><%= food.name %> </a>
@@ -107,5 +108,10 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="<%=root%>/js/generalSearch.js"></script>
+<script>
+  function sendToRelevantPage(id){
+    location.href = `<%=root%>/user/food/${id}`;
+  }
+</script>
 </body>
 </html>
